--- a/molecule/ubuntu-18.04/molecule.yml
+++ b/molecule/ubuntu-18.04/molecule.yml
@@ -32,8 +32,8 @@ platforms:
       - 'disk_bus = "virtio"'
       - 'volume_cache = "none"'
       - 'storage :file, bus: "virtio", cache: "none"'
-lint:
-  name: yamllint
+lint: |
+    yamllint .
 dependency:
   name: galaxy
   options:
