--- a/meta/main.yml
+++ b/meta/main.yml
@@ -15,12 +15,14 @@
 # limitations under the License.
 
 galaxy_info:
+  author: jetune
   role_name: bitbucket
-  author: Wong Hoi Sing Edison <hswong3i@pantarei-design.com>
-  description: Ansible Role for Atlassian Bitbucket Installation
-  company: PantaRei Design
-  license: Apache License 2.0
+  description: Ansible Role for Atlassian Bitbucket Installation [Fork From Wong Hoi Sing Edison]
+  company: "Kube Cloud"
+  issue_tracker_url: https://github.com/kube-cloud/ansible-role-bitbucket.git
+  license: "license (Apache 2.0)"
   min_ansible_version: 2.9
+  github_branch: master
   platforms:
     - name: Ubuntu
       versions:
