--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -47,18 +47,39 @@ bitbucket_jvm_minimum_memory: "1024m"
 bitbucket_jvm_maximum_memory: "1024m"
 
 # Proxy and context path setup.
-bitbucket_catalina_connector_proxyname: ~
-bitbucket_catalina_connector_proxyport: ~
+bitbucket_catalina_connector_proxyname: ""
+bitbucket_catalina_connector_proxyport: ""
 bitbucket_catalina_connector_scheme: "http"
 bitbucket_catalina_connector_secure: "false"
 bitbucket_catalina_context_path: "/"
+
+# Flag to generate or not the bitbucket properties file
+bitbucket_properties_file_generation: true
+
+# Bitbucket properties file path
+bitbucket_properties_file_name: "bitbucket.properties"
+
+# Bitbucket extra properties
+bitbucket_extra_properties: []
+# - plugin.auth-crowd.sso.enabled: false
+# - avatar.gravatar.default: "mm"
+# - avatar.max.size: 1048576
+# - db.pool.size.idle: 0
+# - db.pool.size.max: 80
+# - jdbc.driver=com.mysql.Driver
+# - jdbc.url=jdbc:mysql://localhost:3306/bitbucket
+# - jdbc.user=bitbucket
+# - jdbc.password=bitbucket
+# - jmx.enabled: true
+# - page.max.branches: 100
+# - page.max.commits: 100
+# - password.reset.validity.period: 4320
+# .....
 
 # Atlassian Support recommended JVM arguments.
 bitbucket_jvm_support_recommended_args: >-
   -Datlassian.plugins.enable.wait=300
   -XX:+UnlockExperimentalVMOptions
-  -XX:+UseCGroupMemoryLimitForHeap
-  -XX:MaxRAMFraction=1
 
 # Session timeout.
 bitbucket_session_timeout: "300"
