--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -244,7 +244,8 @@
     path: "{{ bitbucket_home }}/shared/{{ bitbucket_properties_file_name }}"
     create: true
     block: |
-      server.port={{ bitbucket_http_port }}
+      server.context-path={{ bitbucket_catalina_context_path }}
+      server.port={{ bitbucket_catalina_connector_port }}
       server.secure={{ bitbucket_catalina_connector_secure }}
       server.scheme={{ bitbucket_catalina_connector_scheme }}
     owner: "{{ bitbucket_owner }}"
