--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
 
     # Global
     global:
-        - ROLE_NAME: mysql
+        - ROLE_NAME: bitbucket
         - AUTHOR: jetune
     matrix:
         - MOLECULE_DISTRO: centos6
