--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -22,6 +22,25 @@
       import_role:
         name: ansible-role-bitbucket
       vars:
+        bitbucket_download:
+          url: "https://product-downloads.atlassian.com/software/stash/downloads/atlassian-bitbucket-6.10.1.tar.gz"
+          dest: "/var/cache/ansible/atlassian-bitbucket-6.10.1.tar.gz"
+          checksum: "sha1:9e34533bc421f53c4428b74ac4c3fe702ac65131"
+        mysql_jdbc_download:
+          url: "https://dev.mysql.com/get/Downloads/Connector-J/mysql-connector-java-5.1.48.tar.gz"
+          dest: "/var/cache/ansible/mysql-connector-java-5.1.48.tar.gz"
+          checksum: "sha1:a8067480d7d7e4a975771e08b48b64de18837341"
+        postgresql_jdbc_download:
+          url: "https://jdbc.postgresql.org/download/postgresql-42.2.10.jar"
+          dest: "/var/cache/ansible/postgresql-42.2.10.jar"
+          checksum: "sha1:338af492789fd198dbd52735a22b1946030ecc96"
+        bitbucket_owner: "bitbucket"
+        bitbucket_group: "bitbucket"
+        bitbucket_shell: "/usr/sbin/nologin"
+        bitbucket_create_home: false
+        bitbucket_owner_system: true
+        bitbucket_catalina: "/opt/atlassian/bitbucket"
+        bitbucket_home: "/var/atlassian/applicationdata/bitbucket"
         bitbucket_jvm_minimum_memory: "256m"
         bitbucket_jvm_maximum_memory: "512m"
         bitbucket_catalina_connector_scheme: "https"
@@ -29,7 +48,7 @@
         bitbucket_catalina_context_path: "/"
         bitbucket_catalina_connector_port: 8080
         bitbucket_properties_file_generation: true
-        bitbucket_home: "/var/atlassian/applicationdata/bitbucket"
+        bitbucket_properties_file_name: "bitbucket.properties"
         bitbucket_extra_properties:
           - key: "plugin.auth-crowd.sso.enabled"
             value: "false"
